restricted the "check all that apply" to the "choices" question type

--- a/src/geopd/templates/survey.html
+++ b/src/geopd/templates/survey.html
@@ -1,9 +1,9 @@
-{% macro render_question(question, survey_id) -%}
+{% macro render_question(question, survey_id, user) -%}
     <h4 class="page-header text-primary">{{ question.text }}</h4>
-    {% if current_user.id == user.id %}
-        <p class="text-muted">&#x2714 Check all that apply.</p>
-    {% endif %}
     {% if question.type.name == 'choices' %}
+        {% if current_user.id == user.id %}
+            <p class="text-muted">&#x2714 Check all that apply.</p>
+        {% endif %}
         {% with choices = user.surveys[survey_id].responses[question.name].answer_choices
                 if question.name in user.surveys[survey_id].responses else [] %}
             <div class="funkyradio">
@@ -19,37 +19,37 @@
         {% endwith %}
     {% elif question.type.name.startswith('yesno') %}
         {% with explain = question.type.name.endswith('explain') %}
-        <div class="funkyradio{% if explain %} explain{% endif %}">
-            {% with response = user.surveys[survey_id].responses[question.name]
+            <div class="funkyradio{% if explain %} explain{% endif %}">
+                {% with response = user.surveys[survey_id].responses[question.name]
                 if question.name in user.surveys[survey_id].responses else None %}
-                <div class="funkyradio-primary">
-                    <input type="radio" name="{{ question.name }}" id="{{ question.name }}-yes"
-                           {% if response and response.answer_yesno == True -%}
-                           checked="checked"
-                           {%- endif %}
-                           value="yes" data-type="yesno"/>
-                    <label for="{{ question.name }}-yes">Yes</label>
-                </div>
-                <div class="funkyradio-primary">
-                    <input type="radio" name="{{ question.name }}" id="{{ question.name }}-no"
-                           {% if response and response.answer_yesno == False -%}
-                           checked="checked"
-                           {%- endif %}
-                           value="no" data-type="{{ question.type.name }}"/>
-                    <label for="{{ question.name }}-no">No</label>
-                </div>
-                {% if explain %}
-                    <div class="collapse
-                         {%- if response and response.answer_yesno == False %} in{% endif %}"
-                         id="{{ question.name }}-explanation">
-                        <h5 class="text-primary">Explanation</h5>
-                        <p id="{{ question.name }}-explain" class="edit edit-explain">
-                            {{- response.answer_text if response and response.answer_text -}}
-                        </p>
+                    <div class="funkyradio-primary">
+                        <input type="radio" name="{{ question.name }}" id="{{ question.name }}-yes"
+                                {% if response and response.answer_yesno == True -%}
+                               checked="checked"
+                                {%- endif %}
+                               value="yes" data-type="yesno"/>
+                        <label for="{{ question.name }}-yes">Yes</label>
                     </div>
-                {% endif %}
-            {% endwith %}
-        </div>
+                    <div class="funkyradio-primary">
+                        <input type="radio" name="{{ question.name }}" id="{{ question.name }}-no"
+                                {% if response and response.answer_yesno == False -%}
+                               checked="checked"
+                                {%- endif %}
+                               value="no" data-type="{{ question.type.name }}"/>
+                        <label for="{{ question.name }}-no">No</label>
+                    </div>
+                    {% if explain %}
+                        <div class="collapse
+                         {%- if response and response.answer_yesno == False %} in{% endif %}"
+                             id="{{ question.name }}-explanation">
+                            <h5 class="text-primary">Explanation</h5>
+                            <p id="{{ question.name }}-explain" class="edit edit-explain">
+                                {{- response.answer_text if response and response.answer_text -}}
+                            </p>
+                        </div>
+                    {% endif %}
+                {% endwith %}
+            </div>
         {% endwith %}
     {% endif %}
 {%- endmacro %}
