--- a/src/geopd/templates/users/profile/index.html
+++ b/src/geopd/templates/users/profile/index.html
@@ -75,7 +75,7 @@
 
                     <!-- Survey -->
                     <div id="survey-pane" class="tab-pane fade">
-                        {% from "survey.html" import render_question with context %}
+                        {% from "survey.html" import render_question, render_submit with context %}
                         <form id="surveyForm" action="{{ url_for('web.update_user_survey', user_id=current_user.id,
                                                                   survey_id=survey.id) }}"
                               method="post">
@@ -92,7 +92,7 @@
                                 {% for question in survey.questions.values()|sort(attribute='order') %}
                                     {% if question.order <= 3 %}
                                         <div class="col-md-4">
-                                            {{ render_question(question, survey.id) }}
+                                            {{ render_question(question, survey.id, user) }}
                                         </div>
                                     {% endif %}
                                 {% endfor %}
@@ -100,19 +100,14 @@
 
                             {% for question in survey.questions.values()|sort(attribute='order') %}
                                 {% if question.order >= 4 %}
-                                    {{ render_question(question, survey.id) }}
+                                    {{ render_question(question, survey.id, user) }}
                                 {% endif %}
                             {% endfor %}
 
-
-                            <hr/>
-                            <div class="form-group">
-                                {% if survey.complete_on is not none %}
-                                    {{ survey_form.update(class="btn btn-primary") }}
-                                {% else %}
-                                    {{ survey_form.complete(class="btn btn-primary") }}
-                                {% endif %}
-                            </div>
+                            {% if current_user.id == user.id %}
+                                <hr/>
+                                {{ render_submit(survey_form, survey.id) }}
+                            {% endif %}
                         </form>
                     </div>
 
