--- a/src/geopd/templates/navbar.html
+++ b/src/geopd/templates/navbar.html
@@ -34,11 +34,7 @@
                 {{ nav_item('/surveys/', 'Surveys') }}
                 {% endif %}
                 {{ nav_item('/users/', 'Members') }}
-                {% if current_user.is_authenticated %}
-                    {{ nav_item('/contact/', 'Feedback') }}
-                {% else %}
-                    {{ nav_item('/contact/', 'Contact Us') }}
-                {% endif %}
+                {{ nav_item('/contact/', 'Feedback' if current_user.is_authenticated else 'Contact Us') }}
             </ul>
 
             <!-- right side -->
